# sdg

./: LICENSE  README.md
00_AIM_Quicklinks/: README.md
00_Setting Up Git/: README.md
01_Prompt Engineering and Prototyping Best Practices/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  README.md
03_End-to-End_RAG/: README.md
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  README.md  pyproject.toml
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  README.md  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/data/: 2023_llms.html  2024_llms.html
08_Evaluating_RAG_With_Ragas/: Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md
